--- a/views/index.html
+++ b/views/index.html
@@ -8,12 +8,12 @@
 <body>
 <div class="col-sm-12" align="center">
     <h2>Hello inside homepage!</h2>
-    <h4><a href="signup">Signup</a></h4>
-    <h4><a href="register">Register</a></h4>
+    <h4><a href="user/signup">Signup</a></h4>
+    <h4><a href="user/register">Register</a></h4>
     <h4><a href="user/list">get all users</a></h4>
-    <h4><a href="category/getAll">get all categories</a></h4>
-    <h4><a href="category/get/Mountain">get Mountain category</a></h4>
-    <h4><a href="category/get/City">get City category</a></h4>
+    <h4><a href="category/list">get all categories</a></h4>
+    <!--<h4><a href="category/get/:id">get Mountain category</a></h4>
+    <h4><a href="category/get/:id">get City category</a></h4>-->
 </div>
 
 <!--<ul>
