--- a/views/signup.html
+++ b/views/signup.html
@@ -11,7 +11,7 @@
         <h2>Signup!</h2>
 
         <div>
-            <form action="user/login" method="post">
+            <form action="/user/login" method="post">
                 <div class="form-group">
                     <input type="text" class="form-control" style="width:245px" name="email"
                            placeholder="e-mail" required>
