--- a/views/register.html
+++ b/views/register.html
@@ -8,23 +8,28 @@
 <body>
 <div class="col-sm-12" align="center">
     <h2>Registration!</h2>
+
     <div>
         <div>
-            <form action="user/reg" method="post">
+            <form action="/user/reg" method="post">
                 <div class="form-group">
                     <input type="text" class="form-control" style="width:245px" name="name" placeholder="Name" required>
                 </div>
                 <div class="form-group">
-                    <input type="text" class="form-control" style="width:245px" name="surname" placeholder="Surname" required>
+                    <input type="text" class="form-control" style="width:245px" name="surname" placeholder="Surname"
+                           required>
                 </div>
                 <div class="form-group">
-                    <input type="text" class="form-control" style="width:245px" name="email" placeholder="Email" required>
+                    <input type="text" class="form-control" style="width:245px" name="email" placeholder="Email"
+                           required>
                 </div>
                 <div class="form-group">
-                    <input type="text" class="form-control" style="width:245px" name="phone" placeholder="Phone" required>
+                    <input type="text" class="form-control" style="width:245px" name="phone" placeholder="Phone"
+                           required>
                 </div>
                 <div class="form-group">
-                    <input type="text" class="form-control" style="width:245px" name="password" placeholder="Password" required>
+                    <input type="text" class="form-control" style="width:245px" name="password" placeholder="Password"
+                           required>
                 </div>
                 <div class="btn-group">
                     <button type="submit" style="width:120px" class="btn btn-primary">Create</button>
@@ -35,35 +40,6 @@
     </div>
 </div>
 
-<!-- <div>
-     <p>
 
-     <form action="user/order" method="get">
-         <button type="submit" style="width:120px" class="btn btn-primary">Orders</button>
-     </form>
-     </p>
-
-     <p>
-
-     <form action="user/get" method="get">
-         <button type="submit" style="width:120px" class="btn btn-primary">Get user</button>
-     </form>
-     </p>
-
-     <p>
-
-     <form action="user/update" method="post">
-         <button type="submit" style="width:120px" class="btn btn-primary">Update user</button>
-     </form>
-     </p>
-
-     <p>
-
-     <form action="user/delete" method="post">
-         <button type="submit" style="width:120px" class="btn btn-danger">Delete user</button>
-     </form>
-     </p>
- </div>
--->
 </body>
 </html>
