--- a/views/register.html
+++ b/views/register.html
@@ -11,7 +11,7 @@
 
     <div>
         <div>
-            <form action="/user/reg" method="post">
+            <form action="/user/" method="post">
                 <div class="form-group">
                     <input type="text" class="form-control" style="width:245px" name="name" placeholder="Name" required>
                 </div>
