--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,30 @@
 body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  padding: 0px;
+  font: 17px "Lucida Grande", Helvetica, Arial, sans-serif;
+  color: white;
+  background-color: #303030;
 }
 
 a {
   color: #00B7FF;
 }
+
+#myCarousel {
+  width: 100%;
+  margin: auto;
+  position: relative;
+  top: -10px;
+}
+
+#myCarousel img {
+  width: 100%;
+  height: 400px;
+}
+
+#myContainer_1 {
+  background-color: #434343;
+  width: 100%;
+}
+
+
+
