--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,6 +1,6 @@
 body {
   padding: 0px;
-  font: 17px "Lucida Grande", Helvetica, Arial, sans-serif;
+  font: 14px "Lucida Grande", Verdana, Verdana, sans-serif;
   color: white;
   background-color: #303030;
 }
@@ -13,17 +13,16 @@ a {
   width: 100%;
   margin: auto;
   position: relative;
-  top: -10px;
+  top: -20px;
 }
 
 #myCarousel img {
-  width: 100%;
-  height: 400px;
+  width: 90%;
+  height: 550px;
 }
 
 #myContainer_1 {
   background-color: #434343;
-  width: 100%;
 }
 
 
