--- a/public/templates/customer/create.html
+++ b/public/templates/customer/create.html
@@ -1,31 +1,12 @@
-<div id="userCreate" class="container" align="left">
-    <form action="/user/" method="post">
-        <div class="form-group">
-            <input id="name" type="text" class="form-control" style="width:245px"  placeholder="Name" required>
-        </div>
-
-        <div class="form-group">
-            <input id="surname" type="text" class="form-control" style="width:245px" placeholder="Surname">
-        </div>
-
-        <div class="form-group">
-            <input id="email" type="text" class="form-control" style="width:245px"  placeholder="Email">
-        </div>
-
-        <div class="form-group">
-            <input id="phone" type="text" class="form-control" style="width:245px"placeholder="Phone">
-        </div>
-
-        <div class="form-group">
-            <input id="password" type="text" class="form-control" style="width:245px"  placeholder="Password">
-        </div>
-
-        <div class="btn-group" id="saveBtn">
-            <button type="button" class="btn btn-primary">Save</button>
-        </div>
-
-        <div class="btn-group" id="cancelBtn">
-            <button type="button" class="btn btn-danger">Cancel</button>
-        </div>
+<div id="userCreate" class="container" style="width: 300px">
+    <form class="form-signin" action="/user/" method="post">
+        <h2 class="form-signin-heading">Register!</h2>
+            <input id="name" type="text" class="form-control" placeholder="Name" required>
+            <input id="surname" type="text" class="form-control" placeholder="Surname">
+            <input id="email" type="email" class="form-control" placeholder="Email">
+            <input id="phone" type="text" class="form-control" placeholder="Phone">
+            <input id="password" type="password" class="form-control"  placeholder="Password">
+            <button type="button"  id="saveBtn" class="btn btn-primary btn-block">Save</button>
+            <button type="button" id="cancelBtn" class="btn btn-default btn-block">Cancel</button>
     </form>
 </div>
