--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,13 +1,27 @@
 body {
   padding: 0px;
   font: 14px "Lucida Grande", Verdana, Verdana, sans-serif;
-  color: white;
-  background-color: #303030;
+  color: black;
+  background-color: whitesmoke;
 }
 
 a {
   color: #00B7FF;
 }
+
+
+.form-signin .form-control {
+  position: relative;
+  height: auto;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  padding: 10px;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  font-size: 16px;
+}
+
 
 #myCarousel {
   width: 100%;
