--- a/views/signup.html
+++ b/views/signup.html
@@ -6,7 +6,7 @@
     <title>Signup!</title>
 </head>
 <body>
-<div class="col-sm-12" align="center">
+<div class="col-sm-10" align="left">
     <div>
         <h2>Signup!</h2>
 
@@ -14,11 +14,11 @@
             <form action="/user/login" method="post">
                 <div class="form-group">
                     <input type="text" class="form-control" style="width:245px" name="email"
-                           placeholder="e-mail" required>
+                           placeholder="e-mail">
                 </div>
                 <div class="form-group">
                     <input type="password" class="form-control" style="width:245px" name="password"
-                           placeholder="Password" required>
+                           placeholder="Password">
                 </div>
                 <div class="btn-group">
                     <button type="submit" style="width:120px" class="btn btn-primary">Login</button>
