--- a/public/templates/customer/create.html
+++ b/public/templates/customer/create.html
@@ -1,12 +1,13 @@
-<div id="userCreate" class="container" style="width: 300px">
+<div id="userCreate" class="container" align="center" style="width: 300px">
     <form class="form-signin" action="/user/" method="post">
         <h2 class="form-signin-heading">Register!</h2>
-            <input id="name" type="text" class="form-control" placeholder="Name" required>
-            <input id="surname" type="text" class="form-control" placeholder="Surname">
-            <input id="email" type="email" class="form-control" placeholder="Email">
-            <input id="phone" type="text" class="form-control" placeholder="Phone">
-            <input id="password" type="password" class="form-control"  placeholder="Password">
-            <button type="button"  id="saveBtn" class="btn btn-primary btn-block">Save</button>
-            <button type="button" id="cancelBtn" class="btn btn-default btn-block">Cancel</button>
+        <input id="name" type="text" class="form-control" placeholder="Name" required>
+        <input id="surname" type="text" class="form-control" placeholder="Surname">
+        <input id="email" type="email" class="form-control" placeholder="Email">
+        <input id="phone" type="text" class="form-control" placeholder="Phone">
+        <input id="password" type="password" class="form-control" placeholder="Password">
+        <button type="button" id="saveBtn" class="btn btn-primary btn-block">Save</button>
+        <button type="button" id="cancelBtn" class="btn btn-default btn-block">Cancel</button>
     </form>
 </div>
+
