--- a/public/templates/customer/customerTemplate.html
+++ b/public/templates/customer/customerTemplate.html
@@ -1,5 +1,5 @@
 <div class="col-sm-10">
-    <h2>Customers</h2>
+    <h2>Customer id: <%=model.id%></h2>
     <table class="table">
         <tr>
             <th>Image</th>
@@ -7,17 +7,22 @@
             <th>Last Name</th>
             <th>Age</th>
             <th>Email</th>
+            <th>Phone</th>
+            <th>Last Visit</th>
+            <th>Orders</th>
             <th colspan="2"></th>
         </tr>
 
         <tbody id="table">
-        <%collection.forEach(function(model){%>
         <tr id="<%=model.id%>">
-            <td><img src="<%= model.get('image') %>" style="width:50px; height:50px"></td>
+            <td><img src="<%= model.get('image') %>" style="width:120px; height:120px"></td>
             <td><%= model.get('name')%></td>
             <td><%= model.get('surname')%></td>
             <td><%= model.get('age')%></td>
             <td><%= model.get('email')%></td>
+            <td><%= model.get('phone')%></td>
+            <td><%= model.get('lastVisit')%></td>
+            <td><%= model.get('orders')%></td>
             <td>
                 <button type="button" class="btn btn-primary" id="editBtn">Edit</button>
             </td>
@@ -25,12 +30,14 @@
                 <button type="button" class="btn btn-danger" id="removeBtn">Remove</button>
             </td>
         </tr>
-        <%})%>
-        <tr>
-            <div>
-                <button type="button" class="btn btn-success btn-lg" id="createBtn">Create</button>
-            </div>
-        </tr>
         </tbody>
     </table>
+</div>
+
+<div class="col-sm-10">
+    <form action="user/upload/<%= model.id%>" enctype="multipart/form-data" method="post">
+        <h2 class="form-heading">Upload avatar</h2>
+        <input type="file" name="upload" multiple="multiple"><br>
+        <input type="submit" value="Upload" id="inputPicture">
+    </form>
 </div>
