big fix + items started + avatars

--- a/public/templates/customer/customerTemplate.html
+++ b/public/templates/customer/customerTemplate.html
@@ -18,9 +18,9 @@
             <td><img src="<%= model.get('image') %>" style="width:120px; height:120px"></td>
             <td><%= model.get('name')%></td>
             <td><%= model.get('surname')%></td>
-            <td><%= model.get('age')%></td>
-            <td><%= model.get('email')%></td>
-            <td><%= model.get('phone')%></td>
+            <td><span class="label label-default"><%= model.get('age')%></span></td>
+            <td><span class="label label-default"><%= model.get('email')%></span></td>
+            <td><span class="label label-default"><%= model.get('phone')%></span></td>
             <td><%= model.get('lastVisit')%></td>
             <td><%= model.get('orders')%></td>
             <td>
