--- a/public/templates/category/list.html
+++ b/public/templates/category/list.html
@@ -1,12 +1,10 @@
 <div class="col-sm-10">
-    <h2>Customers</h2>
+    <h2>Categories</h2>
     <table class="table">
         <tr>
             <th>Image</th>
-            <th>First Name</th>
-            <th>Last Name</th>
-            <th>Age</th>
-            <th>Email</th>
+            <th>Name</th>
+            <th>Description</th>
             <th></th>
             <th>
                 <div>
@@ -19,17 +17,16 @@
         <tbody id="table">
         <%collection.forEach(function(model){%>
         <tr id="<%=model.id%>">
-            <td><img src="<%= model.get('image') %>" style="width:50px; height:50px"></td>
-            <td><%= model.get('name')%></td>
-            <td><%= model.get('surname')%></td>
-            <td><%= model.get('age')%></td>
-            <td><span class="label label-default"><%= model.get('email')%></span></td>
+            <td><img src="<%= model.get('image') %>" style="width:120px; height:90px"></td>
+            <td><span class="label label-default"><%= model.get('name')%></span></td>
+            <td><%= model.get('description')%></td>
             <td>
                 <button type="button" class="btn btn-primary" id="editBtn">Edit</button>
             </td>
             <td>
                 <button type="button" class="btn btn-danger" id="removeBtn">Remove</button>
             </td>
+            <tr>
         </tr>
         <%})%>
         </tbody>
