--- a/public/templates/customer/create.html
+++ b/public/templates/customer/create.html
@@ -3,9 +3,11 @@
         <h2 class="form-signin-heading">Register!</h2>
         <input id="name" type="text" class="form-control" placeholder="Name" required>
         <input id="surname" type="text" class="form-control" placeholder="Surname">
+        <input id="age" type="text" class="form-control" placeholder="Age">
         <input id="email" type="email" class="form-control" placeholder="Email">
         <input id="phone" type="text" class="form-control" placeholder="Phone">
         <input id="password" type="password" class="form-control" placeholder="Password">
+        <input id="confirmPassword" type="password" class="form-control" placeholder="Confirm password">
         <button type="button" id="saveBtn" class="btn btn-primary btn-block">Save</button>
         <button type="button" id="cancelBtn" class="btn btn-default btn-block">Cancel</button>
     </form>
