--- a/public/templates/item/list.html
+++ b/public/templates/item/list.html
@@ -1,11 +1,12 @@
 <div class="col-sm-10">
-    <h2>Categories</h2>
+    <h2>Items</h2>
     <table class="table">
         <tr>
             <th>Image</th>
             <th>Name</th>
             <th>Description</th>
-            <th></th>
+            <th>Quantity</th>
+            <th>Price</th>
             <th>
                 <div>
                     <button type="button" class="btn btn-success" id="createBtn">Create</button>
@@ -18,15 +19,17 @@
         <%collection.forEach(function(model){%>
         <tr id="<%=model.id%>">
             <td><img src="<%= model.get('image') %>" style="width:120px; height:90px"></td>
-            <td><span class="label label-default"><%= model.get('name')%></span></td>
+            <td><%= model.get('name')%></td>
             <td><%= model.get('description')%></td>
+            <td><span class="label label-default"><%= model.get('quantity')%></span></td>
+            <td><span class="label label-default"><%= model.get('price')%></span></td>
             <td>
                 <button type="button" class="btn btn-primary" id="editBtn">Edit</button>
             </td>
             <td>
                 <button type="button" class="btn btn-danger" id="removeBtn">Remove</button>
             </td>
-            <tr>
+        <tr>
         </tr>
         <%})%>
         </tbody>
